# warg

./: .clang-format  .gitignore  Animation_Utilities.cpp  Animation_Utilities.h  Array_String.cpp  Array_String.h  CMakeLists.txt  Forward_Declarations.h  Forward_Definitions.h  Functions.cpp  Functions.h  General_Purpose.cpp  General_Purpose.h  Globals.cpp  Globals.h  Json.cpp  Json.h  Mesh_Loader.cpp  Mesh_Loader.h  Peer.cpp  Peer.h  Physics.cpp  Physics.h  README.md  Render Test State.json  Render.cpp  Render.h  Render_Test_State.cpp  Render_Test_State.h  Render_Test_State.json  SDL_Imgui_State.cpp  SDL_Imgui_State.h  Sarg_State.cpp  Sarg_State.h  Scene_Graph.cpp  Scene_Graph.h  Serialization_Buffer.h  Session.cpp  Session.h  Shader.cpp  (+26 more)
Assets/Shaders/: TemporalAA.frag  add.frag  bloom_mix.frag  brdf_lut_generator.frag  clangformat.ahk  displacement.vert  duration_spiral.frag  emission.frag  equi_to_cube.frag  equi_to_cube.vert  fireparticle.frag  fragment_shader.frag  fxaa.frag  gamma_correction.frag  gaussian_blur.frag  gaussian_blur_15x.frag  gaussian_blur_7x.frag  high_pass_filter.frag  instance.vert  instance_billboard.vert  liquid.frag  paint.frag  paint_postprocessing.frag  passthrough.frag  passthrough.vert  passthrough_depth.frag  passthrough_displacement.vert  refraction.frag  skeletal_animation.vert  skybox.frag  specular_brdf_convolution - low.frag  specular_brdf_convolution.frag  terrain.frag  tonemapping.frag  variance_shadow_map.frag  vertex_shader.vert  water.frag  world_origin_distance.frag
utf8/: checked.h  unchecked.h
